yellow and red chip have been re-uploaded. Images no longer cropped weird.

--- a/style.css
+++ b/style.css
@@ -150,9 +150,6 @@ body {
 }
 
 #player-amt {
-    /* Temporary */
-    display: none;
-
     align-self: flex-start;
     width: 20%;
     height: 15%;
@@ -160,11 +157,71 @@ body {
     background: yellow;
 }
 
+/* Bank */
 .bank-modal {
     width: 100%;
     height: 20vh;
     min-height: 100px;
-    background: blue;
+    background: darkgreen;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1em;
+}
+
+.one-chips {
+    background: url('images/chips/black-chip.png');
+}
+
+.twenty-five-chips {
+    background: url('images/chips/blue-chip.png');
+}
+
+.fifty-chips {
+    background: url('images/chips/green-chip.png');
+}
+
+.hundred-chips {
+    background: url('images/chips/red-chip.png');
+}
+
+.five-hundred-chips {
+    background: url('images/chips/yellow-chip.png');
+}
+
+.chips {
+    height: 40px;
+    width: 40px;
+
+    background-size: contain;
+    background-repeat: no-repeat;
+    object-fit: scale-down;
+    margin-bottom: -40px;
+}
+
+.one {
+    margin-left: -3px;
+}
+
+.two {
+    margin-left: -5px;
+    transform: rotate(15deg);
+}
+
+.three {
+    margin-left: -7px;
+    transform: rotate(45deg);
+}
+
+.four {
+    margin-left: -9px;
+    transform: rotate(90deg);
+}
+
+.five {
+    margin-left: -11px;
+    transform: rotate(180deg);
 }
 
 .hidden {
